k8s/apps/mvp_frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mvp-frontend
  namespace: default
  labels:
    app:  mvp-frontend
spec:
  selector:
    matchLabels:
      app: mvp-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app:  mvp-frontend
    spec:
      imagePullSecrets:
        - name: acrsecret
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  mvp-frontend
        image:  acrteam03.azurecr.io/mvp_frontend:03ca61b569990440043421692c129a5e99c10b71

        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 100Mi
        #   limits:
        #     cpu: 100m
        #     memory: 100Mi
        # livenessProbe:
        #   tcpSocket:
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 5
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /_status/healthz
        #     port: 80
        #   initialDelaySeconds: 5
        #   timeoutSeconds: 2
        #   successThreshold: 1
        #   failureThreshold: 3
        #   periodSeconds: 10

        # env:
        # - name: DB_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: mvp-configmap
        #       key: DB_HOST
        ports:
        - containerPort: 80
          name:  mvp-frontend
        # volumeMounts:
        # - name: localtime
        #   mountPath: /etc/localtime
      # volumes:
      #   - name: localtime
      #     hostPath:
      #       path: /usr/share/zoneinfo/Asia/Shanghai
      restartPolicy: Always
