k8s/apps/mvp_frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mvp-frontend
  namespace: default
spec:
  selector:
    app: mvp-frontend
  type: ClusterIP
  # sessionAffinity: None
  # sessionAffinityConfig:
  #   clientIP:
  #     timeoutSeconds: 10800
  ports:
  - name: mvp-frontend
    protocol: TCP
    port: 80
    targetPort: 80
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 30000
